# eventor-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  deny.toml
.githooks/: pre-commit
.github/workflows/: ci-rust.yml
examples/: minimal.rs  threads.rs
examples/inner/: error.rs  mod.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/threads/: Cargo.toml
examples/threads/src/: error.rs  main.rs
src/: error.rs  event.rs  event_data.rs  event_listener.rs  event_type.rs  eventor.rs  inner.rs  lib.rs
src/inner/: listener_map.rs  mediator.rs  sync_default.rs  sync_parking_lot.rs  type_map.rs
