# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
edition                 = "2021"
name                    = "eventor"
version                 = "0.11.0-alpha.16"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT OR Apache-2.0"
keywords                = ["subsystem", "event"]
description             = "Event library"
readme                  = "README.md"
documentation           = "https://github.com/hanepjiv/eventor-rs/wiki"
homepage                = "https://github.com/hanepjiv/eventor-rs"
repository              = "https://github.com/hanepjiv/eventor-rs.git"
publish                 = false
# =============================================================================
[workspace]
exclude                 = [ "target/",
                            "examples/"
                            ]
members                 = []
# =============================================================================
[features]
default                 = []
parking_lot             = [ "dep:parking_lot", "elicit/parking_lot", ]
# =============================================================================
# dependencies
[dependencies]
hash_combine            = { default-features = false, version = "0.3.9" }
log                     = { default-features = false, version = "0.4.22" }
# -----------------------------------------------------------------------------
[dependencies.elicit]
default-features        = false
version                 = "0.12.1"

#git                    = "ssh://git@github.com/hanepjiv/elicit-rs.git"
#branch                 = "main"

#path                   = "../../elicit-rs/orig"
# =============================================================================
# optional dependencies
[dependencies.parking_lot]
optional                = true
default-features        = false
version                 = "0.12.3"
