# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "eventor"
version                 = "0.11.0-alpha.16"
publish                 = false

description             = "Event library"
keywords                = ["subsystem", "event"]
categories              = ["asynchronous"]
readme                  = "README.md"

edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
documentation.workspace = true
homepage.workspace      = true
repository.workspace    = true
# =============================================================================
[workspace.package]
rust-version            = "1.83.0"
edition                 = "2021"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT OR Apache-2.0"
documentation           = "https://docs.rs/eventor/"
homepage                = "https://github.com/hanepjiv/eventor-rs"
repository              = "https://github.com/hanepjiv/eventor-rs.git"
# -----------------------------------------------------------------------------
[workspace]
exclude                 = [ "target/",
                            "examples/"
                            ]
members                 = []
# =============================================================================
[features]
default                 = []
parking_lot             = [ "dep:parking_lot", "elicit/parking_lot", ]
# =============================================================================
# dependencies
[dependencies]
hash_combine            = { default-features = false, version = "0.3.9" }
log                     = { default-features = false, version = "0.4.22" }
# -----------------------------------------------------------------------------
[dependencies.elicit]
default-features        = false
version                 = "0.12.2"

#git                     = "ssh://git@github.com/hanepjiv/elicit-rs.git"
#branch                  = "main"

#path                    = "../../elicit-rs/orig"
# =============================================================================
# optional dependencies
[dependencies.parking_lot]
optional                = true
default-features        = false
version                 = "0.12.3"
