[package]
name                    = "threads"
version                 = "0.1.0"
edition                 = "2021"

authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT OR Apache-2.0"
publish                 = false

[features]
default                 = [ #"elicit-parking_lot"
                            ]
elicit-parking_lot      = [ "elicit/parking_lot",
                            "eventor/elicit-parking_lot"
                            ]

[dependencies]
eventor                 = { default_features = false, path = "../../" }

[dependencies.elicit]
default_features        = false
version                 = "^0.11"

#git                    = "ssh://git@github.com/hanepjiv/elicit-rs.git"
#branch                 = "main"

#path                   = "../../../../elicit-rs/orig"

[dependencies.uuid]
default-features        = false
version                 = "^1"
features                = [ "std",
                            "v7",
                            "fast-rng",
                            ]
